--- a/src/app/shared/components/emoji-components/emoji-copied-message/emoji-copied-message.component.html
+++ b/src/app/shared/components/emoji-components/emoji-copied-message/emoji-copied-message.component.html
@@ -1,7 +1,7 @@
 @if (visible) {
     <div
     @fadeInOut
-    class="fixed bottom-4 left-1/2 transform -translate-x-1/2 bg-yellow-400 text-white px-4 py-2 rounded shadow-2xl
+    class="fixed bottom-8 sm:bottom-4 left-1/2 transform -translate-x-1/2 bg-yellow-400 text-white px-4 py-2 rounded shadow-2xl
     cursor-pointer z-50"
     (click)="close()"
   >
